<resources>
    <string name="app_name">PaobuJilu</string>
    <string name="start_run">开始跑步</string>
    <string name="pause_run">暂停跑步</string>
    <string name="duration">时间</string>
    <string name="length">里程</string>
    <string name="duration_display">00:00:00</string>
    <string name="length_display">0.0m</string>
    <string name="pwd">Password</string>
    <string name="name_hint">name</string>
    <string name="btn_login">登录</string>
    <string name="btn_reg">注册</string>
    <string name="stop_run">停止跑步</string>
    <string name="open_gps">打开定位</string>
</resources>
